# BCI_GUI_DEMO

./: .gitignore  README.md
BCIVIS/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  version.txt
BCIVIS/config/: driver.json  trial.json
BCIVIS/frame/include/: frame.h
BCIVIS/frame/src/: frame.cpp
libs/: result.md
libs/dll/windows/msvc/trial_manager/: trial_manager.lib
libs/include/cjson/: cJSON.h
libs/include/data_manager/: data_manager.h
libs/include/device_manager/: device_manager.h
libs/include/osal/: osal_com.h  osal_common.h  osal_log.h  osal_ringbuffer.h  osal_socket.h  osal_thread.h
libs/tools/: README.md  build_lib.cmake
